# Zero

./: .gitignore  README.md  Todo.md  blah.zscene  bottleneck.gdb  build.sh  compile_shaders.sh  config.ini  crash_log.txt  imgui.ini  log_stutters.gdb  meson.build  patch.patch  project.toml  run.sh  skybox.py  stutter_debug.gdb  stutter_log.txt  todo
.cache/clangd/index/: AnimationSystem.h.6CD20CDE687B4E29.idx  AnimationSystem.h.EF556A555D2AD887.idx  AudioSystem.h.9AF7C55916EC2D03.idx  Camera.h.5ACEAC1B2B6347CF.idx  Camera.h.A10071F7D760180E.idx  CameraController.h.4F52277929E2C2DA.idx  CameraController.h.EC79A354BBFF1B86.idx  Config.h.8513FE6386999D3D.idx  Config.h.C2CA2DFAEFBD49E3.idx  Engine.h.5A65F45029A35262.idx  Engine.h.8DE7E3C09C04DED1.idx  GLBLoader.cpp.25B0D0B0BEBB0690.idx  GLBLoader.cpp.68CD439A052BA0CA.idx  GLBLoader.h.58EFDC9001765798.idx  GLBLoader.h.939F28EAE1FEF2A3.idx  Input.h.16145232BCA03838.idx  Input.h.1CFCB786BF84BF76.idx  Mesh.h.C98816EEB3952149.idx  ModelLoader.h.71072F381094B335.idx  ModelLoader.h.8F021E42D71A2FB1.idx  Nuklear.cpp.669E91022D81D3EF.idx  Nuklear.cpp.B1413DEC1F8359AB.idx  NuklearGUI.h.0D9C9DE85785D4C5.idx  NuklearGUI.h.DE9297901630233E.idx  Physics.cpp.0D47DE79EBC8743E.idx  Physics.cpp.E8AEA3F1134CFDE9.idx  PhysicsSystem.cpp.4AB6F735029E7F73.idx  PhysicsSystem.cpp.58AADE038715E79B.idx  PhysicsSystem.h.11D0FFA93005660B.idx  PhysicsSystem.h.78456FF7FBED60FC.idx  Pipeline.h.757F2BB5876198B0.idx  Pipeline.h.DA8D591256AF5013.idx  PipelineGLB.h.0B3742F4F3D0D40A.idx  PipelineInstanced.h.EABC73E9B6507BC4.idx  PipelineLit.h.B8797F722247D602.idx  (+126 more)
Docs/: SceneExample.h
ZeroEngine/: Makefile  Program.cs  README.md  ZeroEngine.csproj  project.toml
ZeroEngine/.build/debug/: CMakeCache.txt  CMakeLists.txt  Makefile  ZeroEngine  cmake_install.cmake
ZeroEngine/Scripts/: Collectible.mg  EnemyAI.mg  FollowCamera.mg  PlayerController.mg  Rotator.mg  enemy_ai.mg  player_controller.mg
ZeroEngine/include/: ECS.h  Logger.h  Objects.h  Renderer.h  ResourceManager.h  ScriptComponent.h  ScriptSystem.h  ScriptingSystem.h  Serialization.h  Systems.h  World.h  sokol_app.h
ZeroEngine/shaders/: shader.frag  shader.vert
ZeroEngine/src/: Renderer.cpp  glad.cpp  main.cpp  sokol_impl.cpp
ZeroPhysics/: README.md  ZeroPhysics  project.toml  run.sh
ZeroPhysics/include/: ZeroPhysics.h  ZeroPhysicsMesh.h
ZeroPhysics/src/: ZeroPhysics.cpp  ZeroPhysicsMesh.cpp  main.cpp
ZeroRuntime/: Makefile  README.md  ZeroRuntime  input_bindings.json  project.toml
ZeroRuntime/include/: World.h
ZeroRuntime/scripts/: Follower.as  Orbiter.as  Orbiter.wren  Player.wren  RotatingCube.as  RotatingCube.wren  SelfDestruct.as  SelfDestruct.wren  Wander.wren
ZeroRuntime/src/: main.cpp
include/: AnimationSystem.h  BoneBuffer.h  Camera.h  CameraController.h  Config.h  DebugUI.h  Engine.h  GLBLoader.h  GLBLoaderOpt.h  ImGuiLayer.h  Input.h  Material.h  Mesh.h  ModelLoader.h  NuklearGUI.h  OBJLoader.h  PhysicsSystem.h  Pipeline.h  PipelineGLB.h  PipelineInstanced.h  PipelineLit.h  PostProcessing.h  Renderer.h  Renderer.h.orig  ResourcePath.h  SceneManager.h  ScenePackage.h  ScenePackager.h  ShaderPipeline.h  ShadowMapping.h  Skybox.h  Texture.h  UISystem.h  asset_manager.h  component_registry.h  prefab.h  spatial_query.h  tags.h  timer.h
shaders/: bloom_blur.frag  bloom_blur_frag.spv  bloom_extract.frag  bloom_extract_frag.spv  composite.frag  composite_frag.spv  frag_glb.spv  frag_lit.spv  fullscreen.vert  fxaa.vert  fxaa_frag.spv  instanced.frag  instanced.vert  instanced_frag.spv  instanced_vert.spv  nuklear.frag  nuklear_frag.spv  nuklear_vert.spv  shader_glb.frag  shader_glb.vert  shader_glb_vert.spv  shader_lit.frag  shader_lit.vert  skybox.frag  skybox.vert  skybox_frag.spv  skybox_vert.spv  standard.frag  standard.vert  standard_frag.spv  standard_vert.spv  unified.frag  unified.vert  unified_frag.spv  unified_vert.spv  unlit.frag  unlit.vert  unlit_frag.spv  unlit_vert.spv  vert_glb.spv  (+1 more)
src/: GLBLoader.cpp  Nuklear.cpp  Physics.cpp  PhysicsSystem.cpp  impls.cpp  main.cpp  tinygltf_impl.cpp
subprojects/ZeroEditor/: meson.build
subprojects/ZeroEditor/include/: Editor.h
subprojects/ZeroEditor/src/: Editor.cpp  EditorUI.cpp  main.cpp
subprojects/ZeroEngine/: build.sh  fix.sh  meson.build
subprojects/ZeroEngine/.build/dev/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
subprojects/ZeroEngine/.cache/clangd/index/: AnimationSystem.h.C48AF26738E37C09.idx  Camera.h.A94603466385974E.idx  CameraController.h.A55DEC2D4B196546.idx  Config.h.D34D5B21D80B7E4F.idx  Engine.h.6F7995440C01B98C.idx  Input.h.6FEF46948681E19A.idx  ModelLoader.h.887423B50876C171.idx  Pipeline.h.AB8611D7A033C5FD.idx  PostProcessing.h.D14C02107767A3A0.idx  Renderer.h.9B68FE0AF81EDDCF.idx  ResourcePath.h.02F912FDF755519B.idx  SceneManager.h.6EA39847FCFBE12C.idx  Skybox.h.1BD0B54D2B7F97EC.idx  Texture.h.3F717CCC9CCE40EB.idx  Time.h.D6933AF5E0D5ECDB.idx  VkBootstrap.h.84F8054DC2D8AEDA.idx  VkBootstrapDispatch.h.8E627D8C529A7A58.idx  VkBootstrapFeatureChain.h.2DC679038B275840.idx  imconfig.h.6DFC2D999CA0D420.idx  imgui.h.AB11EA9663D73B4F.idx  imgui_impl_glfw.h.ECFF10FAEE0C5F22.idx  imgui_impl_vulkan.h.BA4D128DAAE942C0.idx  stb_image.h.7F7E48E0AA92675D.idx  stb_image_write.h.03B1D6BC01F35322.idx
subprojects/ZeroEngine/include/: AudioSystem.h  CameraComponent.h  CameraController.h  DebugDraw.h  Engine.h  FXAA.h  Material.h  ModelComponent.h  ModelLoader.h  ParticleSystem.h  PhysicsSystem.h  PostProcess.h  PostProcessing.h  PushConstants.h  Renderer.h  ResourcePath.h  ScenePackager.h  Texture.h  Time.h  ZeroEngine.h  asset_manager.h  event_system.h  transform.h
subprojects/ZeroEngine/models/: Walking.fbx  tree.glb
subprojects/ZeroEngine/shaders/: bloom.frag  bloom_composite.frag  bloom_composite_frag.spv  bloom_frag.spv  fxaa.frag  shadow.vert  shadow_vert.spv  skybox.vert  skybox_vert.spv  unified.vert
subprojects/ZeroEngine/src/: Renderer.cpp  SceneManager.cpp  ZeroEngine.cpp  impls.cpp
subprojects/ZeroRuntime/: meson.build
subprojects/ZeroRuntime/src/: main.cpp  scene_creator.cpp
(+63 files in other folders)
